<resources>
    <string name="app_name">PixelTimer - Countdown</string>
    <string name="widget_name">PixelTimer - Countdown</string>
    <string name="widget_description">Live countdown timer on your home screen</string>
    <string name="channel_name">Countdown Notifications</string>
    <string name="channel_description">Notifies you when your countdown reaches zero</string>
    <string name="no_countdown">No Active Countdown</string>
    <string name="tap_to_set">Tap to open app and create one</string>
    <string name="event_reached">Event Reached!</string>
    <string name="years_label">YRS</string>
    <string name="months_label">MOS</string>
    <string name="days_label">DAYS</string>
    <string name="hours_label">HRS</string>
    <string name="mins_label">MIN</string>
    <string name="secs_label">SEC</string>

    <!-- Settings & About -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="theme_system">System Default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="settings_font">Font Style</string>
    <string name="font_default">Default</string>
    <string name="font_serif">Serif</string>
    <string name="font_monospace">Monospace</string>
    <string name="font_public_sans">Public Sans</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_desc">Configure sounds, vibration, and priority</string>
    <string name="about_title">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_github">View GitHub Profile</string>
</resources>
